--- a/index.scss
+++ b/index.scss
@@ -12,8 +12,56 @@ $off_black: hsl(0, 0%, 8%);
   font-variation-settings: "slnt" 0;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 
-  @media only screen and (max-width: 600px) {
-    font-size: 13px;
+  // @media only screen and (max-width: 600px) {
+  //   font-size: 13px;
+  // }
+}
+
+body {
+  display: grid;
+  grid-template-areas: "main" "footer";
+  grid-template-rows: 1fr min-content;
+  background-color: $off_black;
+  height: calc(100vh - 4rem);
+  margin: 2rem;
+  color: $white;
+}
+
+main {
+  grid-area: main;
+  display: grid;
+  place-items: center;
+
+  .card {
+    width: 100%;
+    max-width: 40ch;
+    border-color: $white;
+    border-style: solid;
+    border-width: 0.25ch;
+    padding: 2rem;
+
+    .card-user-profile {
+      text-align: center;
+
+      img {
+        width: 7rem;
+        aspect-ratio: 1/1;
+        border-radius: 100%;
+      }
+
+      h4 {
+      }
+
+      h5 {
+      }
+      p {
+      }
+    }
   }
+}
+
+footer {
+  grid-area: footer;
 }
