--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::after,
+*::before {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-size: 14px;
@@ -22,9 +24,10 @@ main {
   display: grid;
   place-items: center; }
   main .card {
+    background-color: #1f1f1f;
     width: 100%;
     max-width: 40ch;
-    border-color: white;
+    border-color: transparent;
     border-style: solid;
     border-width: 0.25ch;
     border-radius: 1rem;
@@ -45,7 +48,8 @@ main {
         font-weight: 600; }
       main .card .card-user-profile h5 {
         margin-bottom: 1.5rem;
-        font-weight: 700; }
+        font-weight: 700;
+        color: #c5f82a; }
     main .card .user-links-list {
       list-style-type: none;
       display: flex;
@@ -56,10 +60,44 @@ main {
         width: 100%; }
         main .card .user-links-list li button {
           width: inherit;
-          padding-block: 0.5rem; }
+          padding-block: 0.75rem;
+          background-color: #333333;
+          color: white;
+          font-weight: 600;
+          cursor: pointer;
+          border-radius: 0.35rem;
+          border-style: none;
+          transform: none;
+          transition: transform 100ms ease-in;
+          transition: background-color 200ms ease-in;
+          transition: color 100ms ease-in;
+          position: relative; }
+        main .card .user-links-list li button::after {
+          content: attr(data-content);
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: #c5f82a;
+          color: #141414;
+          height: 100%;
+          width: 100%;
+          font-weight: 600;
+          padding-block: 0.75rem;
+          border-radius: 0.35rem;
+          border-style: none;
+          transform: scaleX(0);
+          transition: transform 250ms ease-in;
+          transform-origin: right; }
+        main .card .user-links-list li button:hover::after {
+          transform: scaleX(1);
+          transform-origin: left; }
+        main .card .user-links-list li button:active {
+          transform: translateY(0.3ch); }
 
 footer {
   grid-area: footer;
   text-align: center; }
+  footer a {
+    color: white; }
 
 /*# sourceMappingURL=index.css.map */
